tests/NormalTests/paczka1/small_fuzzy/21533101.err
Error in line 9: XIH9Kn A453 47,6
Error in line 10: XIH9Kn S594 67,2
Error in line 11: XIH9Kn A453 35,0
Error in line 15: HSq4OvA S594 88,15
